fixed unreadable texts in works section

--- a/src/components/html/desktop/home/works/WorksSection.module.css
+++ b/src/components/html/desktop/home/works/WorksSection.module.css
@@ -22,7 +22,7 @@
 .section-title {
   position: absolute;
   top: 10%;
-  font-size: min(7vh, 7vw);
+  font-size: min(5vh, 5vw);
   opacity: 0.5;
 }
 
@@ -32,7 +32,7 @@
   justify-content: space-between;
   padding: 1rem;
   box-sizing: border-box;
-  font-size: var(--font-size-s);
+  font-size: min(1.5vw, var(--font-size-s));
 }
 
 .work-number-container {
